Twenty Thirteen: fix for right-aligned images breaking the main column layout in small screen sizes. Props obenland, fixes #23994.
git-svn-id: http://core.svn.wordpress.org/trunk@23945 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -2896,13 +2896,13 @@ footer.entry-meta {
 
 /* Collapse oversized image and pulled images after iPad breakpoint. */
 @media (max-width: 767px) {
-	img.alignleft,
-	.wp-caption.alignleft {
+	.entry-content img.alignleft,
+	.entry-content .wp-caption.alignleft {
 		margin-left: 0;
 	}
 
-	img.alignright,
-	.wp-caption.alignright {
+	.entry-content img.alignright,
+	.entry-content .wp-caption.alignright {
 		margin-right: 0;
 	}
 
